[INJICERT-1145] Remaining changes on #379 criticial PR (#390)
* [INJICERT-1145] Removed stuff related to c4gt

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1145] Host did keys for credential config entries only

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1145] Move status list code from certify-service to status-list service

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* CHeck for all certificates

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

---------

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>